--- a/package.json
+++ b/package.json
@@ -9,25 +9,29 @@
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "bcrypt": "^1.0.3",
+    "create-react-class": "^15.6.2",
     "jquery": "^3.2.1",
     "meteor-node-stubs": "^0.3.2",
+    "moment": "^2.20.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-addons-pure-render-mixin": "^15.6.2",
+    "react-big-calendar": "^0.17.0",
+    "react-datepicker": "^1.0.4",
     "react-dom": "^16.2.0",
     "react-meteor-data": "^0.2.11",
     "react-router-dom": "^4.2.2",
-    "react-select": "^1.2.0",
-    "react-select2-wrapper": "^1.0.4-beta5"
+    "react-select": "^1.2.0"
   },
   "devDependencies": {
     "@meteorjs/eslint-config-meteor": "^1.0.5",
-    "babel-eslint": "^8.1.2",
-    "eslint": "^4.14.0",
+    "babel-eslint": "^8.2.1",
+    "eslint": "^4.15.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-import-resolver-meteor": "^0.4.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-meteor": "^4.1.4",
+    "eslint-plugin-meteor": "^4.1.6",
     "eslint-plugin-react": "^7.5.1"
   },
   "eslintConfig": {
