--- a/package.json
+++ b/package.json
@@ -12,16 +12,13 @@
     "create-react-class": "^15.6.2",
     "jquery": "^3.2.1",
     "meteor-node-stubs": "^0.3.2",
-    "moment": "^2.20.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-addons-pure-render-mixin": "^15.6.2",
     "react-big-calendar": "^0.17.0",
-    "react-datepicker": "^1.0.4",
     "react-dom": "^16.2.0",
     "react-meteor-data": "^0.2.11",
-    "react-router-dom": "^4.2.2",
-    "react-select": "^1.2.0"
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "@meteorjs/eslint-config-meteor": "^1.0.5",
